Update to Java 25 LTS and update to use JUnit 5